<resources>
    <string name="app_name">Home2Work</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- MainActivity -->
    <string name="home_tab">Home</string>
    <string name="match_tab">Matches</string>
    <string name="profile_tab">Profilo</string>
    <string name="shares_tab">Condivisioni</string>

    <!-- SignInActivity  -->
    <string name="activity_signin_sign_in">Accedi</string>
    <string name="invalid_email_error">L\'email inserita non è valida</string>
    <string name="invalid_password_error">La password inserita deve essere lunga almeno 6 caratteri</string>
    <string name="server_error">Errore di comunicazione con il server. Ritenta più tardi o contatta l\'amministratore del sistema</string>
    <string name="login_failed">Dati inseriti non validi</string>
    <string name="session_expired">Sessione scaduta. Rieffettua il login</string>
    <string name="user_logout">Logout avvenuto con successo</string>

    <!-- ProfileActivity -->
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_content">Sei sicuro di voler uscire?</string>
    <string name="logout_dialog_confirm">Esci</string>
    <string name="logout_dialog_cancel">Annulla</string>

    <!-- ConfigurationActivity -->
    <string name="title_activity_configuration">Configurazione</string>
    <string name="config_logout">Logout</string>
    <string name="config_logout_message">Sei sicuro di voler uscire?</string>
    <string name="config_logout_ok">Esci</string>
    <string name="config_logout_cancel">Annulla</string>
    <string name="config_logout_success">Logout avvenuto con successo</string>
    <string name="config_address_insert">Inserisci un indirizzo valido</string>
    <string name="config_city_insert">Inserisci una città o un paese</string>
    <string name="config_cap_insert">Inserisci un CAP valido</string>
    <string name="config_no_address_found">Nessun indirizzo trovato con le informazioni inserite</string>
    <string name="config_job_start_selection">Seleziona un orario di inizio</string>
    <string name="config_job_end_selection">Seleziona un orario di fine</string>
    <string name="config_avatar_selection">Seleziona una foto</string>
    <string name="config_avatar_permission">Per poter caricare una foto l\'app deve disporre dei permessi necessari.</string>

    <!-- EditProfileActivity -->
    <string name="edit_phone_not_valid">Inserisci un numero di telefono valido</string>
    <string name="edit_telegram">Modifica contatto Telegram</string>
    <string name="edit_facebook">Modifica profilo Facebook</string>
    <string name="edit_twitter">Modifica profilo Twitter</string>
    <string name="edit_username_not_valid">Inserisci un username valido</string>
    <string name="edit_avatar_photo_selection">Seleziona una foto</string>

    <!-- MatchActivity -->
    <string name="match_abort_request">Annula richiesta</string>
    <string name="match_abort_request_message">Uscendo confermi di voler annulare la richiesta, proseguire?</string>
    <string name="match_share_request_accepted">La tua richiesta è stata accettata!</string>
    <string name="match_share_request_refused">La tua richiesta è stata rifiutata!</string>
    <string name="match_confirmation_awaiting">In attesa di una risposta...</string>
    <string name="match_share_request_error">Non è al momentro possibile inviare una richiesta.</string>
    <string name="match_start_time">Orario di partenza: %1$s</string>
    <string name="match_end_time">Orario di arrivo: %1$s</string>

    <!-- BookingActivity -->
    <string name="booking_meeting_location_and_time">In <b>%1$s</b> alle <b>%2$s</b></string>

    <!-- MatchFragment -->
    <string name="match_loading_error">Impossibile aggiornare lista match al momento, riprova più tardi</string>

    <!-- Match Adapter -->
    <string name="match_item_shared_distance">%1$s km condivisi</string>
    <string name="match_time">%1$s - %2$s</string>
    <string name="match_karma_preview">%1$d Karma</string>
    <string name="match_exo_preview">%1$d XP</string>

    <!-- Add booking dialog -->
    <string name="new_booking_date_title">Scegli il giorno in cui vorresti un passaggio da %1$s</string>
    <string name="new_booking_notes_title">Puoi aggiungere una nota che %1$s leggerà quando visualizzerà la richiesta di prenotazione.</string>

    <!-- ProfileFragment -->
    <string name="profile_regdate">Iscritto dal %1$s</string>
    <string name="profile_distance">%1$s km percorsi</string>
    <string name="profile_gas">%1$s l di carburante utilizzati</string>
    <string name="profile_emissions">%1$s g di CO2 emessi</string>
    <string name="profile_shares">%1$d condivisioni auto</string>
    <string name="profile_shared_distance">%1$s km condivisi</string>
    <string name="profile_saved_gas">%1$s l di carburante risparmiato</string>
    <string name="profile_saved_emissions">%1$s g di CO2 evitati</string>


    <!-- MatchAdapter -->
    <string name="match_item_distance">Distanza condivisa: %1$s km</string>
    <string name="match_item_gas">Carburante risparmiato: %1$s l</string>
    <string name="match_item_emission">Emissioni evitate: %1$s g CO2</string>
    <string name="match_item_hide_dialog_title">Nascondi match</string>
    <string name="match_item_hide_dialog_content">Nascondendo questo match non avrai più la possibilità di visualizzarlo. Sei sicuro di voler continuare?</string>
    <string name="match_item_hide_dialog_confirm">Nascondi match</string>
    <string name="match_item_hide_dialog_cancel">Annulla</string>
    <string name="match_item_hided">Match nascosto</string>
    <string name="match_item_hide_error">Impossibile rimuovere il match al momento, riprova più tardi</string>

    <!-- Altro -->
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="company">Azienda</string>
    <string name="home">Casa</string>
    <string name="title_activity_share">ShareActivity</string>

    <!-- CustomActivityOnCrash -->
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">Si è verificato un errore inaspettato.\nScusa per l\'inconveniente.</string>
    <string name="customactivityoncrash_error_activity_restart_app">Riavvia app</string>
    <string name="customactivityoncrash_error_activity_close_app">Chiudi app</string>
    <string name="customactivityoncrash_error_activity_error_details">Mostra dettagli errore</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Dettagli errore</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Chiudi</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copia dettagli</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Dettagli copiati nella clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Informazioni errore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
