<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout

        android:padding="@dimen/list_items_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_calendar"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/regdate_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/profile_regdate"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/horizontal_divider"/>

    <LinearLayout
        android:padding="@dimen/list_items_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_road"
            tools:ignore="ContentDescription" />

        <TextView

            android:id="@+id/distance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/profile_distance"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/horizontal_divider"/>

    <LinearLayout
        android:padding="@dimen/list_items_padding"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_gas"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/gas_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/profile_gas"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/horizontal_divider"/>

    <LinearLayout
        android:padding="@dimen/list_items_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_leaf"
            tools:ignore="ContentDescription" />

        <TextView

            android:id="@+id/emissions_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/profile_emissions"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/horizontal_divider"/>

    <LinearLayout
        android:padding="@dimen/list_items_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_car"
            android:tint="@color/colorPrimaryDark"
            tools:ignore="ContentDescription" />

        <TextView

            android:id="@+id/shares_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/profile_shares"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/horizontal_divider"/>

    <LinearLayout
        android:padding="@dimen/list_items_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_road"
            android:tint="@color/colorPrimaryDark"
            tools:ignore="ContentDescription" />

        <TextView

            android:id="@+id/shared_distance_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/profile_shared_distance"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/horizontal_divider"/>

    <LinearLayout
        android:padding="@dimen/list_items_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_gas"
            android:tint="@color/colorPrimaryDark"
            tools:ignore="ContentDescription" />

        <TextView

            android:id="@+id/saved_gas_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/profile_saved_gas"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/horizontal_divider"/>

    <LinearLayout
        android:padding="@dimen/list_items_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_leaf"
            android:tint="@color/colorPrimaryDark"
            tools:ignore="ContentDescription" />

        <TextView

            android:id="@+id/saved_emissions_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/profile_saved_emissions"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
